# tauri_password_manager

./: .gitignore  .prettierrc  angular.json  database.db  package-lock.json  package.json
migrations/2023-08-11-210437_create_users_table/: up.sql
migrations/2023-08-13-054710_passwords/: up.sql
src/: database.sqlite  styles.css
src-tauri/: .env.example  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  schema.rs
src-tauri/src/commands/: mod.rs  passwords_command.rs  users_command.rs
src-tauri/src/models/: mod.rs  password.rs  password_decrypted.rs  password_detail.rs  user.rs
src-tauri/src/services/: mod.rs  password_service.rs  passwords_service.rs  users_service.rs
src/app/: app-routing.module.ts  app.component.ts  app.module.ts
src/app/layout/: layout.module.ts
src/app/layout/app-layout/: app-layout.component.css  app-layout.component.html  app-layout.component.ts
src/app/layout/blank-layout/: blank-layout.component.html
src/app/layout/login-layout/: login-layout.component.html
src/app/page/home/: home.component.html  home.component.ts
src/app/page/login/: login.component.html  login.component.ts
src/app/page/oauth/: oauth.component.html  oauth.component.ts
src/app/page/password-create/: password-create.component.html  password-create.component.ts
src/app/page/password-createe/: password-create.component.ts
src/app/page/password-detail/: password-detail.component.html  password-detail.component.ts
src/app/page/password-list/: password-list.component.html  (+1 more)
src/app/utils/: util-function.service.ts
(+2 files in other folders)
