[package]
name = "valosapp"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tauri = { version = "1.4", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dirs = "5.0.0"
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
uuid = "1.3.1"
magic-crypt = "3.1.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]



